fix adafruit lib_deps (with default config not used but causes compile errors)

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,9 @@ lib_ignore =
     FastLED
 lib_deps = 
     TimerFreeTone=https://bitbucket.org/teckel12/arduino-timer-free-tone/downloads/TimerFreeTone_v1.5.zip
-    Adafruit_GFX=https://github.com/adafruit/Adafruit-GFX-Library/archive/master.zip
-    Adafruit_ST7735=https://github.com/adafruit/Adafruit-ST7735-Library/archive/master.zip
+    adafruit/Adafruit GFX Library
+    adafruit/Adafruit BusIO
+    adafruit/Adafruit ST7735 and ST7789 Library
 build_unflags =
     -g
 build_flags =
